[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Capybara2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player Sprite/capybara/charlieTheCapybaraAnimationSheet.png" type="Texture" id=2]
[ext_resource path="res://Hey Comic.ttf" type="DynamicFontData" id=3]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 128, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 256, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 320, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 448, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 64, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 128, 448, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 192, 448, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 30.5, 21 )

[sub_resource type="DynamicFont" id=32]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=33]
size = 13
font_data = ExtResource( 3 )

[node name="Capybara" type="KinematicBody2D" groups=["Interactable"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 15
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 4 )
shape = SubResource( 10 )

[node name="Label" type="Label" parent="."]
margin_left = -38.0
margin_top = -77.0
margin_right = 109.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 32 )
text = "F - Attack
Space - jump
E - Interact"

[node name="Label2" type="Label" parent="."]
margin_left = -49.0
margin_top = -56.0
margin_right = 126.0
margin_bottom = -17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 33 )
text = "I wonder whats 
   at the top..."

[node name="text2timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="text1timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="texttimergeneral" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="text2timer" to="." method="_on_text2timer_timeout"]
[connection signal="timeout" from="text1timer" to="." method="_on_text1timer_timeout"]
[connection signal="timeout" from="texttimergeneral" to="." method="_on_texttimergeneral_timeout"]
